# line_length_analysis

./: .gitignore  .pylintrc  main.py  pyproject.toml  requirements.md
line_length_analysis/: args_parser.py  config.py  display.py  line_length_analysis.py
test/: line_length_analysis_test.py
